# MoviesToWatch

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  build.sh  gen_db.cpp  gen_db.sh  main.cpp  readme.txt  run.sh
blog/: 00.początek-masochizmu.md  01.baza-danych.md  02.surreal_db.md  03.polaczenie_z_surreal_db.md
database/: config.template.json  generate.sql
src/: CMakeLists.txt  database.cpp  database.hpp  hello_controller.cpp  hello_controller.hpp  models.hpp
src/models/: movie_to_watch.cpp  movie_to_watch.hpp
